--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Favicon -->
-     <link rel="shortcut icon" href="{% static 'icon/favicon.ico' %}"/>
-
+     <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/microsoft/209/candy_1f36c.png">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
@@ -59,7 +58,7 @@
 
     .navControl {
         display: inline-block;
-        color: #FF5C87;
+        color: #ee275b;
         font-size: 1.2rem;
         cursor: pointer;
         margin-right: 2rem;
@@ -76,7 +75,7 @@
 
     .navAction a:hover {
         text-decoration: none;
-        color: #FF5C87;
+        color: #ee275b;
     }
 
     .navInput{
@@ -96,14 +95,14 @@
     .actionButton{
         text-align: center;
         width: 100%;
-        background-color:#FF5C87 ;
+        background-color:#ee275b ;
         border-radius: 0.5rem;
         color: white;
     }
 
     .actionButton:hover{
         color: white;
-        background-color: #ee275b;
+        background-color: #b3033a;
     }
 
     .togglerButton {
