--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Favicon -->
-     <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/microsoft/209/candy_1f36c.png">
+    <link rel="icon"
+          href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/microsoft/209/candy_1f36c.png">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
@@ -69,6 +70,11 @@
 
     }
 
+    .navAction {
+        display: flex;
+        justify-content: space-between;
+    }
+
     .navAction a {
         text-decoration: none;
     }
@@ -78,7 +84,7 @@
         color: #ee275b;
     }
 
-    .navInput{
+    .navInput {
         outline: 0;
         border: none;
         border-bottom: 1px solid #262626;
@@ -87,20 +93,20 @@
 
     }
 
-    .navInputLabel{
-        color:#0088FF ;
+    .navInputLabel {
+        color: #0088FF;
         margin-right: 1.5rem;
     }
 
-    .actionButton{
+    .actionButton {
         text-align: center;
         width: 100%;
-        background-color:#ee275b ;
+        background-color: #ee275b;
         border-radius: 0.5rem;
         color: white;
     }
 
-    .actionButton:hover{
+    .actionButton:hover {
         color: white;
         background-color: #b3033a;
     }
@@ -114,8 +120,8 @@
     }
 
     @media only screen and (max-width: 1000px) {
-    .socialSweet {
-        margin: auto;
+        .socialSweet {
+            margin: auto;
         }
     }
 </style>
@@ -149,15 +155,21 @@
 
             {% else %}
 
-                <!-- Button trigger Sign Up modal -->
-                <div class="navControl" data-bs-toggle="modal" data-bs-target="#signupModal">
-                    Sign Up
+                <div class="navAction">
+
+                    <!-- Button trigger Login modal -->
+                    <div class="navControl" data-bs-toggle="modal" data-bs-target="#loginModal">
+                        Log In
+                    </div>
+
+                    <!-- Button trigger Sign Up modal -->
+
+                    <div class="navControl" data-bs-toggle="modal" data-bs-target="#signupModal">
+                        Sign Up
+                    </div>
+
                 </div>
 
-                <!-- Button trigger Login modal -->
-                <div class="navControl" data-bs-toggle="modal" data-bs-target="#loginModal">
-                    Log In
-                </div>
             {% endif %}
 
         </div>
@@ -178,17 +190,20 @@
 
                     <div class="mb-3">
                         <label for="username" class="navInputLabel"><i class="fas fa-user"></i></label>
-                        <input type="text" class="navInput" id="username" name="username" placeholder="Username" required autocomplete="off">
+                        <input type="text" class="navInput" id="username" name="username" placeholder="Username"
+                               required autocomplete="off">
                     </div>
 
                     <div class="mb-3">
                         <label for="firstname" class="navInputLabel"><i class="fas fa-id-badge"></i></label>
-                        <input type="text" class="navInput" id="firstname" name="firstname" placeholder="First Name" required>
+                        <input type="text" class="navInput" id="firstname" name="firstname" placeholder="First Name"
+                               required>
                     </div>
 
                     <div class="mb-3">
                         <label for="lastname" class="navInputLabel"><i class="fas fa-id-badge"></i> </label>
-                        <input type="text" class="navInput" id="lastname" name="lastname" placeholder="Last Name" required>
+                        <input type="text" class="navInput" id="lastname" name="lastname" placeholder="Last Name"
+                               required>
                     </div>
 
                     <div class="mb-3">
@@ -198,12 +213,14 @@
 
                     <div class="mb-3">
                         <label for="password1" class="navInputLabel"><i class="fas fa-lock"></i></label>
-                        <input type="password" class="navInput" id="password1" name="password1" placeholder="Password" required>
+                        <input type="password" class="navInput" id="password1" name="password1" placeholder="Password"
+                               required>
                     </div>
 
                     <div class="mb-3">
                         <label for="password2" class="navInputLabel"><i class="fas fa-lock"></i></label>
-                        <input type="password" class="navInput" id="password2" name="password2" placeholder="Confirm Password" required>
+                        <input type="password" class="navInput" id="password2" name="password2"
+                               placeholder="Confirm Password" required>
                     </div>
 
                     <div>
@@ -230,12 +247,14 @@
                 <form action="/user/login/" method="post"> {% csrf_token %}
                     <div class="mb-3">
                         <label for="usernameLogin" class="navInputLabel"><i class="fas fa-user"></i></label>
-                        <input type="text" class="navInput" id="usernameLogin" name="username" placeholder="Username" required>
+                        <input type="text" class="navInput" id="usernameLogin" name="username" placeholder="Username"
+                               required>
                     </div>
 
                     <div class="mb-3">
                         <label for="password1Login" class="navInputLabel"><i class="fas fa-lock"></i></label>
-                        <input type="password" class="navInput" id="password1Login" name="password1" placeholder="Password" required>
+                        <input type="password" class="navInput" id="password1Login" name="password1"
+                               placeholder="Password" required>
                     </div>
 
                     <div>
@@ -267,12 +286,13 @@
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
 <script
-            src="https://code.jquery.com/jquery-3.6.0.js"
-            integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-            crossorigin="anonymous"></script>
+        src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+        crossorigin="anonymous"></script>
 <script>
     setTimeout(fadeOut, 2000);
-    function fadeOut(){
+
+    function fadeOut() {
         $(".message").fadeOut().empty();
     }
 </script>
