--- a/user/static/css/profile.css
+++ b/user/static/css/profile.css
@@ -154,6 +154,9 @@
     .postRule {
         width: 90vw;
     }
+    .profileRule{
+        width: 90vw;
+    }
 }
 
 @media only screen and (max-width: 700px) {
